# OpenCE

./: README.md  README_ZH.md  pyproject.toml
ace/: adaptation.py  deduplication.py
scripts/: run_local_adapter.py  run_questions.py
src/opence/: __init__.py
src/opence/adapters/: __init__.py  langchain.py
src/opence/components/: __init__.py
src/opence/components/acquirers/: file_reader.py
src/opence/components/constructors/: few_shot_selector.py
src/opence/components/evaluators/: ace_reflector.py
src/opence/components/evolvers/: ace_curator.py
src/opence/components/processors/: compressors.py  rerankers.py
src/opence/core/: __init__.py  orchestrator.py
src/opence/interfaces/: __init__.py  acquisition.py  construction.py  data_models.py  evaluation.py  evolution.py  processing.py
src/opence/methods/: __init__.py  ace_closed_loop.py  base.py
src/opence/methods/ace/: __init__.py  deduplication.py  playbook.py  roles.py
src/opence/models/: __init__.py  clients.py  providers.py  rwkv_client.py
tests/: conftest.py  test_ace_components.py  test_adaptation.py  test_deduplication.py  test_methods.py  test_orchestrator.py
